// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useIntl() hook should work when switching locale on provider 1`] = `
<span
  data-testid="comp"
>
  $10,000.00
</span>
`;

exports[`useIntl() hook should work when switching locale on provider 2`] = `
<span
  data-testid="comp"
>
  10.000,00 US$
</span>
`;

exports[`useIntl() hook should work when switching locale on provider 3`] = `
<span
  data-testid="comp"
>
  $10,000.00
</span>
`;
